third_party/move/move-compiler-v2/tests/visibility-checker/module_call_visibility_friend_invalid.exp

Diagnostics:
error: `public(friend)` function `0x2::X::f_friend` cannot be called from `0x2::M::f_friend_call_friend` because `0x2::M` is not a friend of `0x2::X`
   ┌─ tests/visibility-checker/module_call_visibility_friend_invalid.move:18:49
   │
18 │     public(friend) fun f_friend_call_friend() { X::f_friend() }
   │                                                 ^^^^^^^^^^^^^

error: function `0x2::X::f_private` cannot be called from `0x2::M::f_friend_call_private_1` because it is private to module `0x2::X`
   ┌─ tests/visibility-checker/module_call_visibility_friend_invalid.move:22:52
   │
22 │     public(friend) fun f_friend_call_private_1() { X::f_private() }
   │                                                    ^^^^^^^^^^^^^^

error: function `0x2::Y::f_private` cannot be called from `0x2::M::f_friend_call_private_2` because it is private to module `0x2::Y`
   ┌─ tests/visibility-checker/module_call_visibility_friend_invalid.move:23:52
   │
23 │     public(friend) fun f_friend_call_private_2() { Y::f_private() }
   │                                                    ^^^^^^^^^^^^^^
